--- a/404.html
+++ b/404.html
@@ -19,6 +19,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>PAGE NOT FOUND. =(</strong></p>
+  <p>You might have entered an incorrect link. Please try again.</p>
 </div>
