--- a/projects/index.html
+++ b/projects/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Projects
-subtitle: What I've been working on lately.
-description: Journal is a stunning personal blog Jekyll theme with an image-focused design.
+subtitle: My completed, ongoing, and future research activities
+description: This page contains my past, present, and planned research activities.
 featured_image: /images/demo/demo-landscape.jpg
 ---
 
