April 19 major updates

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Projects
-subtitle: My completed, ongoing, and future research activities
-description: This page contains my past, present, and planned research activities.
+subtitle: My Research and Development Involvement
+description: Check out the projects that I am working on!
 featured_image: /images/demo/demo-landscape.jpg
 ---
 
