--- a/services/index.html
+++ b/services/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Projects
-subtitle: My Research and Development Involvement
-description: Check out the projects that I am working on!
+title: Services
+subtitle: Professional Services
+description: Check out the professional services I offer.
 featured_image: /images/demo/demo-landscape.jpg
 ---
 
