--- a/services/index.html
+++ b/services/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Services
-subtitle: Professional Services
+subtitle: Language Editing, Research Consultancy, and Training Services
 description: Check out the professional services I offer.
 featured_image: /images/demo/demo-landscape.jpg
 ---
