April 6 major update

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Wilfred Gabriel A. Gapas
-description: Language Teacher and Applied Linguistics Researcher
+description: Language Educator and Applied Linguistics Researcher
 featured_image: /images/site/square-4.png
 ---
 
