April 6 major update

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Services
+title: Projects and Services
 subtitle: Language Editing, Research Consultancy, and Training Services
 description: This page contains more information about the professional services I can offer. 
 featured_image: /images/site/square-5.png
