--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,8 @@ description: This page contains more information about the professional services
 featured_image: /images/site/square-5.png
 ---
 
+![](/images/site/pagebanner/projects.png)
+
 <section class="intro">
 
 	<div class="wrap">
