--- a/projects/index.html
+++ b/projects/index.html
@@ -1,12 +1,10 @@
 ---
 layout: default
-title: Projects and Services
-subtitle: Language Editing, Research Consultancy, and Training Services
-description: This page contains more information about the professional services I can offer. 
+title: Projects 
+subtitle: Find more information about my academic and other public initiatives here.
+description: This page contains more information about my projects and initiatives. 
 featured_image: /images/site/square-5.png
 ---
-
-![](/images/site/pagebanner/projects.png)
 
 <section class="intro">
 
@@ -14,6 +12,8 @@ featured_image: /images/site/square-5.png
 
 		<h1>{{ page.title }}</h1>
 		<p>{{ page.subtitle }}</p>
+
+		<img src="https://senseigab.github.io/site/pagebanner/projects.png">
 
 	</div>
 
