--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ featured_image: /images/site/square-4.png
 	<div class="wrap">
 
 		<h1>Projects</h1>
-		<p>Check out my research and other projects below.</p>
+		<p>Check out my research and other projects below. If you're interested, take a look at my professional services!</p>
 
 	</div>
 
